avoid weird scrolling bar bug (where scrollbar would be fixed in place when scrolling horizontally)   position: relative; on messages forces browser to create a new drawing context

--- a/resources/less/chat.less
+++ b/resources/less/chat.less
@@ -275,6 +275,7 @@ body {
     }
 
     .messages {
+      position: relative;
       overflow-y: scroll;
       padding: 0 @pad;
     }
